Refactoring: Removing code duplication on the DPS Solvers (#675)